Fixed display for smaller screens
Now the answer-possibilities were compressed in an unreadable manner on
smaller screens. This is fixed now.

--- a/skin/styles/tw.css
+++ b/skin/styles/tw.css
@@ -27,9 +27,8 @@ body.main /* Workaround fuer Farbverlauf im IE statt ShadowBox */
 }
 body.testtool-content
 {
-	/*/padding: 0px 50px 0px 50px;*/
-	overflow: hidden;
-	width: 50%;
+	width: 65%;
+	margin-left: 3%;
 }
 html
 {
